# registration

./: CMakeLists.txt  README.md  hyperspec_read.cpp  hyperspec_read.h  main.cpp  params.conf  readimage.cpp
includes/: hyperspec.h  hyperspec_read.h  multispec.h  multispec_read.h  readimage.h  registration.h
src/: affine.cpp  bspline.cpp  demons.cpp  hyperspec.cpp  hyperspec_read.cpp  mask.cpp  multispec.cpp  multispec_read.cpp  readimage.cpp  reg1.cpp  reg2.cpp  regAffine.cpp  regMask.cpp  registration.cpp  rigid.cpp  similarity.cpp  translation.cpp
